# soft-sampling

./: README.md  pyproject.toml  soft_sampling_grpo.py  soft_sampling_play.ipynb
