[project]
name = "soft-sampling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.7.28",
    "jaxtyping>=0.2.36",
    "torch>=2.5.1",
    "transformers[torch]>=4.48.1",
    "trl>=0.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "jupyterlab-vim>=4.1.4",
]
